--- a/src/main/resources/templates/CustomerView/index.html
+++ b/src/main/resources/templates/CustomerView/index.html
@@ -32,6 +32,12 @@
     </style>
 </head>
 <body>
+    <div th:if="${message}" class="alert alert-success">
+        <p th:text="${message}"></p>
+    </div>
+    <div th:if="${error}" class="alert alert-danger">
+        <p th:text="${error}"></p>
+    </div>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
